--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Haruki Nishimura <hnishimura@stanford.edu>"]
 version = "0.1.0"
 
 [deps]
+AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
